--- a/styles/cvboots.css
+++ b/styles/cvboots.css
@@ -361,6 +361,7 @@ section{
     background-color:ivory;
     transition: 1.5s;
     transition-timing-function: ease;
+    margin-bottom:15px;
     
 }
 
