--- a/styles/cvboots.css
+++ b/styles/cvboots.css
@@ -518,7 +518,7 @@ ol{
     padding-top: 0px;
     padding-left: 35px;
     background: #d82c2e;
-    height: 500px;
+    height: auto;
 }
 .divers h4{
     background: #fff;
